--- a/WestCoastEducation2.web/Views/Home/Index.cshtml
+++ b/WestCoastEducation2.web/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <ul class="navigation">
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
         <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
+        <li><a asp-action="Index" asp-controller="Admin"><i class="fa-solid fa-gear"></i></a></li>
     </ul>
     <p class="header-text">It's not too <br> late to apply</p>
     </div>
