--- a/WestCoastEducation2.web/Views/StudentAdmin/Create.cshtml
+++ b/WestCoastEducation2.web/Views/StudentAdmin/Create.cshtml
@@ -5,7 +5,8 @@
 
 
 <div class="page">
-  <h1>Add User</h1>
+  <h1>Add Student</h1>
+  <br>
     <form class="shadow" asp-action="Create" asp-controller="StudentAdmin" method="post">
         <div class="form-control">
             <label for="">UserID</label>
