--- a/WestCoastEducation2.web/Views/StudentAdmin/Edit.cshtml
+++ b/WestCoastEducation2.web/Views/StudentAdmin/Edit.cshtml
@@ -6,7 +6,7 @@
 
  <div class="page">
   <h1>Update User</h1>
-    <form class="shadow" asp-action="Create" asp-controller="StudentAdmin" method="post">
+    <form class="shadow" asp-action="Edit" asp-controller="StudentAdmin" asp-route-Id=@Model.userId  method="post">
         <div class="form-control">
             <label for="">UserID</label>
             <input>
