--- a/WestCoastEducation2.web/Views/TeacherAdmin/Edit.cshtml
+++ b/WestCoastEducation2.web/Views/TeacherAdmin/Edit.cshtml
@@ -6,7 +6,8 @@
 
 <div class="page">
   <h1>Edit User</h1>
-    <form class="shadow" asp-action="Create" asp-controller="TeacherAdmin" method="post">
+    <form class="shadow" asp-action="Edit" asp-controller="TeacherAdmin" asp-route-Id=@Model.userId 
+     method="post">
         <div class="form-control">
             <label for="">UserId</label>
             <input>
